# aiopenapi3_redfish

./: .gitignore  README.md  pyproject.toml
src/aiopenapi3_redfish/: __init__.py  _patch.py  actions.py  base.py  client.py  clinic.py  errors.py  manager.py  odata.py  oem.py  service.py  serviceroot.py  tasks.py
src/aiopenapi3_redfish/Oem/Dell/: clinic.py  oem.py
src/aiopenapi3_redfish/Oem/NVIDIA/: clinic.py
src/aiopenapi3_redfish/entities/: __init__.py  actions.py  collections.py  manager.py  service.py  settings.py
tests/: dell_test.py  new_test.py
