[project]
name = "aiopenapi3_redfish"
version = "0.0.1"
description = "DMTF Redfish Client build upon the OpenAPI description documents"
authors = [
    {name = "Markus Kötter", email = "commonism@users.noreply.github.com"},
]
dependencies = [
    "aiopenapi3>=0.5.0",
    "routes>=2.5.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "BSD-3-Clause"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
package-type = "library"

[tool.pdm.dev-dependencies]
dev = [
    "pytest-asyncio>=0.23.2",
    "pytest>=7.4.3",
    "pytest-httpx>=0.22.0",
]

[[tool.pdm.autoexport]]
filename = "requirements.txt"
format = "requirements"
without-hashes = true
groups = ["default"]
