[project]
name = "aiopenapi3_redfish"
version = "0.0.1"
description = "DMTF Redfish Client build upon the OpenAPI description documents"
authors = [
    {name = "Markus Kötter", email = "commonism@users.noreply.github.com"},
]
dependencies = [
    "aiopenapi3 @ git+https://github.com/commonism/aiopenapi3.git@b06667b10dad5fd8fcc0997ca3d68826b0611416",
    "routes>=2.5.1",
    "jq>=1.6.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "BSD-3-Clause"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
package-type = "library"

[tool.pdm.dev-dependencies]
dev = [
    "pytest-asyncio>=0.23.2",
    "pytest>=7.4.3",
    "pytest-httpx>=0.22.0",
]

[[tool.pdm.autoexport]]
filename = "requirements.txt"
format = "requirements"
without-hashes = true
groups = ["default"]

[tool.pytest.ini_options]
asyncio_mode = "strict"

log_cli = "yes"
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)-12.12s %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

addopts = "--capture=no --ignore-glob 'tests/my_*.py'"
